# Changelog 

--------------------------

# END OF YEAR 2025

--------------------------

## [v2026+1.0.0] - December 31, 2025

Wejkey.org (wejkey.github.io/wejkeyy.github.io) exists since 2024. Thats 3 years
of development, new projects and learning. Thanks for checking this page or any project I developed. It means a lot.

I hope, 2026 will be as best as it can be for you.

--------------------------

## [v2026+1.0.0-beta.8] - December 30, 2025

## Changed
- Planning project name
- Temporary paused development for Database

--------------------------

## [v2026+1.0.0-beta.7] - December 27, 2025

## Added
- Planning projects > "Minecraft server"

--------------------------

## [v2026+1.0.0-beta.6] - December 26, 2025

## Fixed
- Grammar errors
- Minor details

## Changed
- Hero card (aka "Check these")

--------------------------

## [v2026+1.0.0-beta.5] - December 22, 2025

## Fixed
- Portfolio release date in projects

--------------------------

## [v2026+1.0.0-beta.4] - December 22, 2025

## Removed
- PaperMC Hangar
- Two primary buttons

--------------------------

## [v2026+1.0.0-beta.3] - December 20, 2025

### Fixed
- Grammar

## Changed
- Loading time
- Timeline

## Removed
- Future

--------------------------

## [v2026+1.0.0-beta.2] - December 19, 2025

### Removed
- Every .txt note in notes (only changelog stays)
- Updated versions

--------------------------

## [v2026+1.0.0-beta.1] - December 15, 2025

### Added
- Responsive

--------------------------

## [v2026+1.0.0-beta] - December 14, 2025

### Added
- "Future" section

### Changed
- General "wejkey.org" redesign

--------------------------

## [3.1.5] - December 3, 2025

### Added
- More "contact" icons

### Changed
- Merged Database & Plugins into one project on homepage
- Database to general base for my projects, not just Minecraft plugins

### Removed
- Project "Plugins"

--------------------------

## [3.1.4] - November 23, 2025

### Added
- Database

--------------------------
